--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,13 +1,19 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "composite": true,
     "module": "commonjs",
-    "strict": true,
-    "esModuleInterop": true,
+    "target": "ES2020",
+    "lib": ["ES2020"],
     "skipLibCheck": true,
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "outDir": "./dist",
-    "rootDir": "./src"
+    "strict": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    "resolveJsonModule": true,
+    "outDir": "./dist"
   },
-  "include": ["src/**/*"]
+  "include": ["api/**/*.ts"]
 }
